<resources>
    <string name="app_name">NotesApp</string>
    <string name="search">Search for notes</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="note_added">Note Added Successfully</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_updated">Note updated successfully!</string>
    <string name="note_deleted">Note deleted successfully!</string>
    <string name="action_toggle_theme">Toggle Theme</string>
    <string name="dismiss">Dismiss</string>


</resources>