<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        tools:context=".ui.edit_note.view.EditNoteActivity">

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete_note"
            android:src="@drawable/bin"
            app:tint="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:hint="@string/title"
            android:textSize="@dimen/size_24"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/radius_15"
            app:boxCornerRadiusBottomStart="@dimen/radius_15"
            app:boxCornerRadiusTopEnd="@dimen/radius_15"
            app:boxCornerRadiusTopStart="@dimen/radius_15"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:hint="@string/note"
            android:textSize="@dimen/size_24"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/radius_15"
            app:boxCornerRadiusBottomStart="@dimen/radius_15"
            app:boxCornerRadiusTopEnd="@dimen/radius_15"
            app:boxCornerRadiusTopStart="@dimen/radius_15"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="?attr/colorPrimary"
            android:text="@string/edit_note"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>